public/styles/new-tweet.css
#tweet-text {
  font-family: 'Source Sans Pro', 'sans-serif';
  font-weight: bold;
  color: #654949;
  height: 50px;
  width: 100%;
  background-color: transparent;
  border-bottom: 4px solid rgb(73, 67, 60);
  border-left: 0;
  border-top: 0;
  border-right: 0;
}

form {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap 
}

.tweet-button{
  background-color: #679775;
  font-family: 'Bungee', 'sans-serif';
  color: #f4f1ec;
  margin-top: 15px;
}

.counter {
  font-family: 'Bungee', 'sans-serif';
  color: #654949;
  margin-top: 20px;

}

.tweet-error {
  display: none;
  font-family: 'Source Sans Pro', 'sans-serif';
  font-weight: 200;
  color: red;
  border: red solid 2px;
  margin-top: 15px;
  margin-left: auto;
  margin-right: 20px;
  padding: 2px 15px;
}

.counter.tweet-is-too-long {
  font-family: 'Bungee', 'sans-serif';
  color: red;
}

.tweet-container {
  display: flex;
  border:#49433c solid 3px;
  margin-top: 20px;
  flex-direction: column;
  font-family: 'Source Sans Pro', 'sans-serif';
}

.tweet-container:hover {
  box-shadow: 0 0 11px #49433c;
}

.tweet-container-header {
  display: flex;
  align-items: center;
  justify-self: flex-end;
}

.username {
  display: flex;
  margin-left: auto;
  padding-right: 25px;
  color: #9c9a98;
  font-weight: bold;
  font-size: 20px;
}

.tweet-profile-image {
  height: 80px;
  width: 80px;
  margin: 10px;
}

.previous-tweet-text {
  border-bottom:#49433c 3px solid;
  background-color: transparent;
  margin: 5px;
  padding: 10px;
  padding-bottom: 15px;
}

.tweet-container-bottom {
  display: flex;
  justify-content: space-between;
  font-size: small;
  padding: 8px;

}

i:hover {
  color:  #7aa386;
}

